<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <!--Partido-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_partido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/form_partido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_partidos"
                android:imeOptions="actionNext"
                android:inputType="text|textCapSentences" />
        </android.support.design.widget.TextInputLayout>

        <!--Minuto-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_minuto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/form_minuto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_minuto"
                android:imeOptions="actionNext"
                android:inputType="text|textCapSentences" />
        </android.support.design.widget.TextInputLayout>

        <!--Jugada-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_jugada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/form_jugada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_jugada"
                android:imeOptions="actionNext"
                android:inputType="text|textCapSentences" />
        </android.support.design.widget.TextInputLayout>

        <!--Resultado OK-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_resultado_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/form_resultado_ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_resultado_ok"
                android:imeOptions="actionNext"
                android:inputType="text|textCapSentences" />
        </android.support.design.widget.TextInputLayout>

        <!--Resultado KO-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_resultado_ko"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/form_resultado_ko"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_resultado_ko"
                android:imeOptions="actionNext"
                android:inputType="text|textCapSentences" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

</RelativeLayout>