<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="110dp"
    tools:context="com.feedback.football.main.MainActivity">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <!-- PARTIDO -->
        <TextView
            android:id="@+id/form_lbl_partidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/lbl_partidos"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/form_partidos_jornada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/lbl_partidos"
            android:inputType="text"
            android:spinnerMode="dropdown"
            android:textAlignment="center"/>

        <!-- MINUTO DE LA JUGADA-->
        <TextView
            android:id="@+id/lbl_minuto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/lbl_minuto"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/form_minuto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:entries="@array/minutos"
            android:hint="@string/lbl_minuto"
            android:inputType="text"
            android:spinnerMode="dropdown"
            android:textAlignment="center"/>

        <!-- JUGADA -->
        <TextView
            android:id="@+id/form_lbl_jugada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/lbl_jugada"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/form_jugada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:entries="@array/jugadas"
            android:hint="@string/lbl_jugada"
            android:inputType="text"
            android:spinnerMode="dropdown"
            android:textAlignment="center"/>


    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/form_ko"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentRight="false"
        android:layout_alignWithParentIfMissing="true"
        android:layout_margin="20dp"
        android:clickable="true"
        android:elevation="10dp"
        android:onClick="votingClickKo"
        android:src="@drawable/delete"
        app:backgroundTint="@color/colorPrimary"
        app:fabSize="normal"
        app:layout_anchor="@+id/activity_main"
        app:layout_anchorGravity="bottom|left"/>
    <!--app:srcCompat="@android:drawable/ic_delete"-->
    <!--android:background="@drawable/delete"-->

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/form_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentRight="true"
        android:layout_alignWithParentIfMissing="true"
        android:layout_margin="20dp"
        android:clickable="true"
        android:elevation="10dp"
        android:onClick="votingClickOk"
        android:src="@drawable/checkmark"
        app:backgroundTint="@color/colorPrimary"
        app:fabSize="normal"
        app:layout_anchor="@+id/activity_main"
        app:layout_anchorGravity="bottom|right"/>
    <!--app:backgroundTint="#c83f3e3e"-->

    <TextView
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="90dp"
        android:inputType="text|textCapSentences"
        android:text="@string/lbl_arbitro"
        android:textAppearance="?android:attr/textAppearanceLarge"
        app:layout_anchor="@+id/activity_main"
        app:layout_anchorGravity="bottom|center"/>


</android.support.design.widget.CoordinatorLayout>